# lambda-mac

./: Cargo.toml  README.md
programs/: boolean.lcm  foo.lcm  macro.lcm
src/: ast.rs  debruijn.rs  eval.rs  expand.rs  ir.rs  lib.rs  main.rs  parse.rs  parser.rs  shift.rs  substitute.rs  syntax.rs
