[package]
name = "lambda-mac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom-supreme = "0.8.0"
pretty_assertions = "1.2.1"
tracing = { version = "0.1.35", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.1"
