[package]
name = "lambda-mac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
color-eyre = "0.6.1"
extend = "1.1.2"
im = "15.1.0"
nom = "7.1.1"
nom-supreme = "0.8.0"
paste = "1.0.7"
pretty_assertions = "1.2.1"
rustyline = "9.1.2"
smol_str = "0.1.23"
tracing = { version = "0.1.35", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.1"

[dev-dependencies]
extend = "1.1.2"
maplit = "1.0.2"
